WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116610
[EFL][WK2] Wrong context menu and popup menu positions when scroll is applied
https://bugs.webkit.org/show_bug.cgi?id=116610
Summary
[EFL][WK2] Wrong context menu and popup menu positions when scroll is applied
Michal Pakula vel Rutka
Reported
2013-05-22 06:16:54 PDT
When page is scrolled context menu and popup menu are calculated incorrectly. ScrollView::contentsToWindow does not recalculates the position regarding to scroll value, because of m_delegatesScrolling flag set on in EFL port.
Attachments
patch
(6.71 KB, patch)
2013-06-13 00:34 PDT
,
Michal Pakula vel Rutka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michal Pakula vel Rutka
Comment 1
2013-06-13 00:34:59 PDT
Created
attachment 204558
[details]
patch
WebKit Commit Bot
Comment 2
2013-06-13 01:24:11 PDT
Comment on
attachment 204558
[details]
patch Clearing flags on attachment: 204558 Committed
r151541
: <
http://trac.webkit.org/changeset/151541
>
WebKit Commit Bot
Comment 3
2013-06-13 01:24:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug