[EFL][WK2] Wrong context menu and popup menu positions when scroll is applied https://bugs.webkit.org/show_bug.cgi?id=116610

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-06-13
Reviewed by Noam Rosenthal.

Source/WebKit2:

WebKit2 EFL uses fixed layout - because of this ScrollView::contentsToWindow, does
not take scroll into account, as it is meant to be handled by UI application.
When popup and context menu are created, after calling contentsToWindow their position
are not adjusted to page scroll.
Added two functions to EwkView and WKView, converting contents position to user viewport
coordinates, to adjust popup and context menu positions.

* UIProcess/API/C/CoordinatedGraphics/WKView.cpp:
(WKViewContentsToUserViewport):
* UIProcess/API/C/CoordinatedGraphics/WKView.h:
* UIProcess/API/efl/EwkView.cpp:
(EwkView::showContextMenu):
(EwkView::requestPopupMenu):
* UIProcess/CoordinatedGraphics/WebView.cpp:
(WebKit::WebView::contentsToUserViewport):
* UIProcess/CoordinatedGraphics/WebView.h:

Tools:

Remove unnecessary code adjusting context menu position to webview position.
Now position is calculcated in EwkView.

* MiniBrowser/efl/main.c:
(on_context_menu_show):

Canonical link: https://commits.webkit.org/135746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151541 268f45cc-cd09-0410-ab3c-d52691b4dbfc