Source/WebKit2/UIProcess/API/C/CoordinatedGraphics/WKView.h
@@ -80,6 +80,7 @@ WK_EXPORT void WKViewSetContentPosition(WKViewRef, WKPoint);
 WK_EXPORT void WKViewSetUserViewportTranslation(WKViewRef, double tx, double ty);
 WK_EXPORT WKPoint WKViewUserViewportToContents(WKViewRef, WKPoint);
 WK_EXPORT WKPoint WKViewUserViewportToScene(WKViewRef, WKPoint);
+WK_EXPORT WKPoint WKViewContentsToUserViewport(WKViewRef, WKPoint);
 
 WK_EXPORT void WKViewPaintToCurrentGLContext(WKViewRef);
 
